Ask for confirmation before exiting when there are active downloads.

--- a/tests/file_chooser.html
+++ b/tests/file_chooser.html
@@ -1,2 +1,5 @@
 <input type="file"/>
+<input type="file" accept=".jpg,.png"/>
+<input type="file" accept="image/png"/>
+<input type="file" accept="image/*"/>
 <input type="file" multiple/>
